--- a/playbook.yml
+++ b/playbook.yml
@@ -1,7 +1,3 @@
-Thanks, Maggie.
+The driver memory being set to 8g seems to be sufficient for execution. However, the issue appears to be that the spark.driver.maxResultSize is set to 1g, which is too small for handling the result from our larger datasets (such as the 1.5 GB file).
 
-Based on the pure Python workflows, LBAAS is now working as expected after adjusting the receive window on the LBAAS side.
-
-Ashwin, since these changes are related to the application from Spark, can we have someone from the dev team look into it?
-
-We also need to handle the Spark workflows separately to increase the heap size and the maximum result size for Spark.
+I suggest increasing this limit to at least 2g to resolve the issue. I've created a ticket for this and will keep you updated.
