--- a/playbook.yml
+++ b/playbook.yml
@@ -1,2 +1,7 @@
-Romil,
-Since the Spark workflows aren't related to LBAAS, I'll proceed with promoting the changes in other lanes. I'll keep you updated once it's done.
+Hi Shankar,
+
+As part of the upcoming changes, there will be no significant impact on users. However, they may experience intermittent connections or minor disruptions for approximately half an hour.
+
+Please let me know if you'd like any further details.
+
+I’ve copied Ashwin and Ryo on this for their reference as well.
